{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 83,
  "lineage": "ce910b3d-9577-0c94-8bee-548bdddd5e96",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dfsc-nat1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08d4626e627d97bba",
            "domain": "vpc",
            "id": "eipalloc-0b3ec3ede426bf92b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09804688d9d9fadb9",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-54-146-29-142.compute-1.amazonaws.com",
            "public_ip": "54.146.29.142",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dfsc-nat2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0165fedb2049c74c3",
            "domain": "vpc",
            "id": "eipalloc-0b46d863250240e8b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c4d8610793c2702e",
            "private_dns": "ip-10-0-2-16.ec2.internal",
            "private_ip": "10.0.2.16",
            "public_dns": "ec2-3-225-49-38.compute-1.amazonaws.com",
            "public_ip": "3.225.49.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dfsc_bastion_host-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0533f2ba8a1995cf9",
            "arn": "arn:aws:ec2:us-east-1:777387657313:instance/i-07171059fc24be1da",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07171059fc24be1da",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf5428cab09c7130",
            "private_dns": "ip-10-0-1-164.ec2.internal",
            "private_ip": "10.0.1.164",
            "public_ip": "18.209.160.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06364c89f0505f575",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072f29ee1f88e73e8",
            "tags": {
              "Name": "DFSC Bastion Host - 1A",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08bc538e02bbb179b"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.dfsc_bastion_sg",
            "aws_subnet.dfsc-public-1a",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dfsc_bastion_host-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0533f2ba8a1995cf9",
            "arn": "arn:aws:ec2:us-east-1:777387657313:instance/i-00f6dc497bdc85de7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f6dc497bdc85de7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01247c4f153a2c18e",
            "private_dns": "ip-10-0-2-124.ec2.internal",
            "private_ip": "10.0.2.124",
            "public_ip": "34.201.24.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3a3315240995ef2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009c54796a6f51ebc",
            "tags": {
              "Name": "DFSC Bastion Host - 1B",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08bc538e02bbb179b"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.dfsc_bastion_sg",
            "aws_subnet.dfsc-public-1b",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dfsc-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777387657313:internet-gateway/igw-05acf7bf06abc2ad5",
            "id": "igw-05acf7bf06abc2ad5",
            "owner_id": "777387657313",
            "tags": {
              "Name": "DFSC Internet Gateway",
              "Terraform": "true"
            },
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dfsc_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:777387657313:loadbalancer/app/dfsc-app-load-balancer/4f4c370ad503bf0e",
            "arn_suffix": "app/dfsc-app-load-balancer/4f4c370ad503bf0e",
            "dns_name": "dfsc-app-load-balancer-719924156.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:777387657313:loadbalancer/app/dfsc-app-load-balancer/4f4c370ad503bf0e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dfsc-app-load-balancer",
            "security_groups": [
              "sg-00250f746a335e6de"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-009c54796a6f51ebc"
              },
              {
                "subnet_id": "subnet-072f29ee1f88e73e8"
              }
            ],
            "subnets": [
              "subnet-009c54796a6f51ebc",
              "subnet-072f29ee1f88e73e8"
            ],
            "tags": {
              "Name": "DFSC Application Load Balancer",
              "Terraform": "True"
            },
            "vpc_id": "vpc-065aa01109a6a0686",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.dfsc_alb_sg",
            "aws_subnet.dfsc-public-1a",
            "aws_subnet.dfsc-public-1b",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dfsc-back-end-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:777387657313:targetgroup/dfsc-back-end-target-group/84bd9b766ea22daa",
            "arn_suffix": "targetgroup/dfsc-back-end-target-group/84bd9b766ea22daa",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/healthy.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:777387657313:targetgroup/dfsc-back-end-target-group/84bd9b766ea22daa",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dfsc-back-end-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "DFSC Back End Target Group",
              "Terraform": "True"
            },
            "target_type": "instance",
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dfsc-front-end-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:777387657313:targetgroup/dfsc-front-end-target-group/52bd4cb378ec831d",
            "arn_suffix": "targetgroup/dfsc-front-end-target-group/52bd4cb378ec831d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/healthy.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:777387657313:targetgroup/dfsc-front-end-target-group/52bd4cb378ec831d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dfsc-front-end-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "DFSC Front End Target Group",
              "Terraform": "True"
            },
            "target_type": "instance",
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dfsc-nat-gateway-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3ec3ede426bf92b",
            "id": "nat-04608159d61aa9636",
            "network_interface_id": "eni-09804688d9d9fadb9",
            "private_ip": "10.0.1.194",
            "public_ip": "54.146.29.142",
            "subnet_id": "subnet-072f29ee1f88e73e8",
            "tags": {
              "Name": "Nat Gateway-1a",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "aws_eip.dfsc-nat1",
            "aws_subnet.dfsc-public-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dfsc-nat-gateway-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b46d863250240e8b",
            "id": "nat-02fefcc46c8660b03",
            "network_interface_id": "eni-0c4d8610793c2702e",
            "private_ip": "10.0.2.16",
            "public_ip": "3.225.49.38",
            "subnet_id": "subnet-009c54796a6f51ebc",
            "tags": {
              "Name": "Nat Gateway-1b",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "aws_eip.dfsc-nat2",
            "aws_subnet.dfsc-public-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dfsc-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05f84103ca9d947eb",
            "owner_id": "777387657313",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05acf7bf06abc2ad5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DFSC Public Route Table",
              "Terraform": "true"
            },
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_internet_gateway.dfsc-igw",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dfsc_private_route_table_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08ba23fc272c252ff",
            "owner_id": "777387657313",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04608159d61aa9636",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DFSC Private route table 1A",
              "Terraform": "True"
            },
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_nat_gateway.dfsc-nat-gateway-1a",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dfsc_private_route_table_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04c83f939b94f4e97",
            "owner_id": "777387657313",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02fefcc46c8660b03",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DFSC Private route table 1B",
              "Terraform": "True"
            },
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_nat_gateway.dfsc-nat-gateway-1b",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dfsc-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f45643dc72a32f28",
            "route_table_id": "rtb-08ba23fc272c252ff",
            "subnet_id": "subnet-0d320f6855d4f2c8e"
          },
          "dependencies": [
            "aws_nat_gateway.dfsc-nat-gateway-1a",
            "aws_route_table.dfsc_private_route_table_1a",
            "aws_subnet.dfsc-private-1a",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dfsc-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0667e994ac5d834eb",
            "route_table_id": "rtb-04c83f939b94f4e97",
            "subnet_id": "subnet-0d5a81c31df74f233"
          },
          "dependencies": [
            "aws_nat_gateway.dfsc-nat-gateway-1b",
            "aws_route_table.dfsc_private_route_table_1b",
            "aws_subnet.dfsc-private-1b",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dfsc-public-1a-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7bcce38a2dd73c6",
            "route_table_id": "rtb-05f84103ca9d947eb",
            "subnet_id": "subnet-072f29ee1f88e73e8"
          },
          "dependencies": [
            "aws_internet_gateway.dfsc-igw",
            "aws_route_table.dfsc-public",
            "aws_subnet.dfsc-public-1a",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dfsc-public-1b-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f639401d647a5b4d",
            "route_table_id": "rtb-05f84103ca9d947eb",
            "subnet_id": "subnet-009c54796a6f51ebc"
          },
          "dependencies": [
            "aws_internet_gateway.dfsc-igw",
            "aws_route_table.dfsc-public",
            "aws_subnet.dfsc-public-1b",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dfsc_alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777387657313:security-group/sg-00250f746a335e6de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00250f746a335e6de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB Security Group",
            "name_prefix": "",
            "owner_id": "777387657313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DFSC ALB Security Group",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dfsc_asg_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777387657313:security-group/sg-077aea1a5bceb63a5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077aea1a5bceb63a5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08bc538e02bbb179b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00250f746a335e6de"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asg security_groups",
            "name_prefix": "",
            "owner_id": "777387657313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DFSC ASG Security Group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_security_group.dfsc_alb_sg",
            "aws_security_group.dfsc_bastion_sg",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dfsc_bastion_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777387657313:security-group/sg-08bc538e02bbb179b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08bc538e02bbb179b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BastionHost Security  Group",
            "name_prefix": "",
            "owner_id": "777387657313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DFSC Bastion Security Group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dfsc_db_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777387657313:security-group/sg-07822fc191cf1c7b0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07822fc191cf1c7b0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077aea1a5bceb63a5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DFSC RDS Security Group",
            "name_prefix": "",
            "owner_id": "777387657313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_security_group.dfsc_asg_sg",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dfsc_efs_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777387657313:security-group/sg-0053ce9f8d0cc4947",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0053ce9f8d0cc4947",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077aea1a5bceb63a5"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "DFSC EFS Security Group",
            "name_prefix": "",
            "owner_id": "777387657313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EFS Security Group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_security_group.dfsc_asg_sg",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dfsc_elasticache_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777387657313:security-group/sg-0160f32d6a0653fe8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0160f32d6a0653fe8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077aea1a5bceb63a5"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "DFSC Elasticache Security Group",
            "name_prefix": "",
            "owner_id": "777387657313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DFSC Elasticache Security Group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_security_group.dfsc_asg_sg",
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dfsc-private-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777387657313:subnet/subnet-0d320f6855d4f2c8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d320f6855d4f2c8e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "777387657313",
            "tags": {
              "Name": "DFSC Private Subnet - 1A",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "DFSC Private Subnet - 1A",
              "Terraform": "True"
            },
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dfsc-private-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777387657313:subnet/subnet-0d5a81c31df74f233",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0d5a81c31df74f233",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "777387657313",
            "tags": {
              "Name": "DFSC Private Subnet - 1B",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "DFSC Private Subnet - 1B",
              "Terraform": "True"
            },
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dfsc-public-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777387657313:subnet/subnet-072f29ee1f88e73e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-072f29ee1f88e73e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777387657313",
            "tags": {
              "Name": "DFSC Pblic Subnet - 1A",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "DFSC Pblic Subnet - 1A",
              "Terraform": "True"
            },
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dfsc-public-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777387657313:subnet/subnet-009c54796a6f51ebc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-009c54796a6f51ebc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777387657313",
            "tags": {
              "Name": "DFSC Pblic Subnet - 1B",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "DFSC Pblic Subnet - 1B",
              "Terraform": "True"
            },
            "vpc_id": "vpc-065aa01109a6a0686"
          },
          "dependencies": [
            "aws_vpc.dfsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dfsc_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777387657313:vpc/vpc-065aa01109a6a0686",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef79be7ae975a51c",
            "default_route_table_id": "rtb-098e3583ae90e3404",
            "default_security_group_id": "sg-07517607b9e83e320",
            "dhcp_options_id": "dopt-2110405b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-065aa01109a6a0686",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-098e3583ae90e3404",
            "owner_id": "777387657313",
            "tags": {
              "Name": "DFSC VPC",
              "Terrafrom": "True"
            },
            "tags_all": {
              "Name": "DFSC VPC",
              "Terrafrom": "True"
            }
          }
        }
      ]
    }
  ]
}